--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,33 @@
+@font-face {
+  font-family: "Bebas-Neue";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../font/Bebas-Neue.eot");
+  src: url("../font/Bebas-Neue.otf"), url("../font/Bebas-Neue.ttf"); }
+@font-face {
+  font-family: "Socialico";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../font/Socialico.eot");
+  src: url("../font/Socialico.otf"), url("../font/Socialico.ttf"); }
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
   max-width: 100%; }
 
+.callig {
+  font-family: 'Calligraffitti', cursive; }
+
 header {
   position: fixed;
-  width: 100%; }
+  width: 100%;
+  top: -9em;
+  text-align: center;
+  transition: all 0.4s;
+  font-family: 'Calligraffitti', cursive; }
+  header:hover {
+    top: -6em; }
   header:before {
     left: 0;
     content: "";
@@ -30,8 +51,27 @@ header {
     transform: skew(0deg, -5deg);
     right: 0; }
   header nav ul {
-    margin: 0; }
+    margin: 0;
+    color: #f7f7f7;
+    font-weight: bold;
+    padding-bottom: 1em; }
     header nav ul li {
-      display: inline-block; }
+      display: inline-block;
+      padding: 0 10px; }
+  header #logo {
+    background: #000;
+    position: relative;
+    width: 15%;
+    text-align: center;
+    min-height: 100%;
+    max-width: 100%;
+    left: 43%;
+    height: 100px;
+    top: 140px;
+    z-index: 5;
+    border-radius: 5em 0; }
+    header #logo img {
+      margin-top: -20px;
+      width: 100px; }
 
 /*# sourceMappingURL=style.css.map */
