--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,27 @@ html, body {
 .callig {
   font-family: 'Calligraffitti', cursive; }
 
+.slider_container {
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  z-index: -2;
+  background-color: #000; }
+  .slider_container .sliderContainer {
+    white-space: nowrap;
+    height: 100%; }
+    .slider_container .sliderContainer .slide {
+      display: inline-block;
+      background-color: #fff;
+      margin-right: -4px; }
+
+.fullScreen {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0; }
+
 header {
   position: fixed;
   width: 100%;
