--- a/css/style.css
+++ b/css/style.css
@@ -62,14 +62,52 @@ html, body {
       background-size: 100%;
       background-position: bottom; }
 
+#cuartos {
+  position: relative; }
+
+.centerCircle {
+  position: relative;
+  top: 70%;
+  z-index: 5;
+  height: 100px;
+  width: 100px;
+  padding: 50px;
+  padding-bottom: 60px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #f7f7f7;
+  text-align: center;
+  border-radius: 100px;
+  font-size: 1.8em;
+  margin: 0 auto;
+  border: solid 2px #d8d68c; }
+
 .fullScreen {
   width: 100%;
   height: 100%;
   padding: 0;
   margin: 0; }
 
+.half {
+  display: inline-block;
+  margin-right: -4px;
+  width: 50%;
+  vertical-align: top; }
+
+.halfRooms {
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  z-index: 0; }
+  .halfRooms img {
+    -webkit-filter: contrast(50%) blur(2px);
+    transition: all 0.4s;
+    width: 100%; }
+    .halfRooms img:hover {
+      -webkit-filter: contrast(100%) blur(0px); }
+
 header {
   position: fixed;
+  z-index: 10000;
   width: 100%;
   top: -9em;
   text-align: center;
@@ -107,6 +145,8 @@ header {
     header nav ul li {
       display: inline-block;
       padding: 0 10px; }
+    header nav ul a {
+      color: white; }
   header #logo {
     background: #000;
     position: relative;
