--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,8 @@ html,body{
 	max-width: 100%;
 }
 
+
+
 .callig{
 	font-family: 'Calligraffitti', cursive;
 }
@@ -81,6 +83,28 @@ html,body{
 	 }
 }
 
+#cuartos{
+	position: relative;
+}
+
+.centerCircle{
+	position: relative;
+	top: 70%;
+	z-index: 5;
+	height:100px;
+	width: 100px;
+	padding: 50px;
+	padding-bottom: 60px;
+	background-color: rgba(0,0,0,0.7);
+	color: #f7f7f7;
+	text-align: center;
+	border-radius: 100px;
+	font-size: 1.8em;
+	margin: 0 auto;
+	border:solid 2px #d8d68c;
+
+}
+
 .fullScreen{
 	width: 100%;
 	height: 100%;
@@ -88,8 +112,31 @@ html,body{
 	margin: 0;
 }
 
+.half{
+	display: inline-block;
+	margin-right: -4px;
+	width: 50%;
+	vertical-align: top;
+}
+
+.halfRooms{
+	height: 100%;
+	overflow: hidden;
+	position: relative;
+	z-index: 0;
+	img{
+		-webkit-filter: contrast(50%) blur(2px);
+		transition: all 0.4s ;
+		width: 100%;
+		&:hover{
+			-webkit-filter:contrast(100%) blur(0px);
+		}
+	}
+}
+
 header{
 	position: fixed;
+	z-index: 10000;
 	width: 100%;
 	top: -9em;
 	text-align: center;
@@ -115,6 +162,9 @@ header{
 		li{
 			display: inline-block;
 			padding: 0 10px;
+		}
+		a{
+			color: white;
 		}
 	}
 	#logo{
