--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ html, body {
 .callig {
   font-family: 'Calligraffitti', cursive; }
 
+.marginTop {
+  width: 80%;
+  margin: 0 auto;
+  padding-top: 7em; }
+
 .mensajePrincipal {
   width: 40%;
   padding-top: 10%;
@@ -44,8 +49,17 @@ html, body {
   .mensajePrincipal p {
     font-weight: bolder; }
 
+.ribbon {
+  width: 117%;
+  height: 50px;
+  position: relative;
+  left: -25px;
+  top: 20px;
+  background: url(../img/ribbon.png);
+  background-size: 100% 100%; }
+
 .slider_container {
-  position: fixed;
+  position: absolute;
   overflow: hidden;
   top: 0;
   left: 0;
@@ -65,9 +79,39 @@ html, body {
 #cuartos {
   position: relative; }
 
+#costos {
+  background-image: url(../img/DSCN1332.jpg);
+  background-size: 100% auto; }
+  #costos .precio {
+    position: relative;
+    width: 28%;
+    margin-left: 3.5%;
+    display: inline-block;
+    background-color: #f7f7f7;
+    vertical-align: top;
+    padding: 2em 0.5%;
+    text-align: center;
+    padding-top: 0;
+    border: 1px solid #ccc; }
+    #costos .precio h3 {
+      font-size: 2em;
+      color: #3e87cc; }
+    #costos .precio .costo {
+      background-color: #3e87cc;
+      color: #fff;
+      font-size: 1.5em;
+      width: 50%;
+      margin: 0 auto;
+      padding: 0.5em; }
+    #costos .precio .ver-mas {
+      display: block;
+      margin-top: 30px;
+      cursor: pointer;
+      color: #477FD7; }
+
 .centerCircle {
-  position: relative;
-  top: 70%;
+  position: absolute;
+  top: 30%;
   z-index: 5;
   height: 100px;
   width: 100px;
@@ -78,7 +122,8 @@ html, body {
   text-align: center;
   border-radius: 100px;
   font-size: 1.8em;
-  margin: 0 auto;
+  left: 40%;
+  left: -webkit-calc(50% - 100px);
   border: solid 2px #d8d68c; }
 
 .fullScreen {
