--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,29 @@ html, body {
       background-size: 100%;
       background-position: bottom; }
 
+#buffet {
+  position: relative; }
+  #buffet .image_food {
+    z-index: 20;
+    position: absolute;
+    right: 0;
+    width: 80px;
+    height: 80px;
+    border-radius: 80px;
+    transition: all 1s ease-in;
+    background-size: 100%;
+    background-position: 50%;
+    cursor: pointer; }
+  #buffet .viewport {
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0px;
+    transition: all 1s ease-in;
+    cursor: auto; }
+
 #cuartos {
   position: relative; }
 
