--- a/css/style.scss
+++ b/css/style.scss
@@ -102,6 +102,33 @@ html,body{
 	 }
 }
 
+#buffet{
+	position: relative;
+	.image_food{
+		z-index: 20;
+		position: absolute;
+		right: 0;
+		width: 80px;
+		height: 80px;
+		border-radius: 80px;
+		transition: all 1s ease-in;
+		background-size: 100%;
+		background-position: 50%;
+		cursor: pointer;
+
+	}
+	.viewport{
+		z-index: 1;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 0px;
+		transition:all 1s ease-in;
+		cursor: auto;
+	}	
+}
+
 #cuartos{
 	position: relative;
 }
