--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,34 @@ html, body {
     transition: all 1s ease-in;
     cursor: auto; }
 
+#contacto {
+  background: url(../img/DSCN1218.jpg);
+  background-size: 100% auto;
+  text-align: center; }
+  #contacto .marginTop {
+    padding-top: 6em; }
+  #contacto .social {
+    font-size: 5em;
+    transition: all 0.4s;
+    cursor: pointer; }
+    #contacto .social:hover {
+      color: #5f5f5f;
+      text-shadow: 0px 0px 2px #000; }
+    #contacto .social a {
+      color: #3e87cc;
+      text-decoration: none; }
+  #contacto h3 {
+    font-size: 1.8em;
+    line-height: 0.8em;
+    background: #f7f7f7;
+    color: #3e87cc;
+    padding-top: 0.2em; }
+  #contacto p {
+    font-size: 1.5em;
+    color: #222;
+    text-shadow: 0px 0px 2px #000;
+    background-color: rgba(250, 250, 250, 0.7); }
+
 #cuartos {
   position: relative; }
 
@@ -148,6 +176,12 @@ html, body {
   left: 40%;
   left: -webkit-calc(50% - 100px);
   border: solid 2px #d8d68c; }
+
+#google_canvas {
+  width: 100%;
+  height: 400px;
+  border: solid 5px #eee;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.8); }
 
 .fullScreen {
   width: 100%;
@@ -230,5 +264,8 @@ header {
     header #logo img {
       margin-top: -20px;
       width: 100px; }
+
+.social {
+  font-family: 'Socialico'; }
 
 /*# sourceMappingURL=style.css.map */
