--- a/css/style.scss
+++ b/css/style.scss
@@ -129,6 +129,41 @@ html,body{
 	}	
 }
 
+#contacto{
+	background: url(../img/DSCN1218.jpg);
+	background-size: 100% auto;
+	text-align: center;
+	.marginTop{
+		padding-top: 6em;
+	}
+	.social{
+		font-size: 5em;
+		transition: all 0.4s;
+		cursor: pointer;
+		&:hover{
+			color:#5f5f5f;
+			text-shadow: 0px 0px 2px #000; 
+		}
+		a{
+			color: $blue;
+			text-decoration: none;
+		}
+	}
+	h3{
+		font-size: 1.8em;
+		line-height: 0.8em; 
+		background: #f7f7f7;
+		color: $blue;
+		padding-top: 0.2em;
+	}
+	p{
+		font-size: 1.5em;
+		color: #222;
+		text-shadow: 0px 0px 2px #000;
+		background-color: rgba(250,250,250,0.7);
+	}
+}
+
 #cuartos{
 	position: relative;
 }
@@ -187,6 +222,12 @@ html,body{
 
 }
 
+#google_canvas{
+	width: 100%;
+	height: 400px;
+	border: solid 5px #eee;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.8);
+}
 
 .fullScreen{
 	width: 100%;
@@ -267,4 +308,8 @@ header{
 			width:100px;
 		}
 	}
+}
+
+.social{
+	font-family: 'Socialico';
 }
