--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ html, body {
 .mensajePrincipal {
   width: 40%;
   padding-top: 10%;
-  color: #f7f7f7; }
+  color: #f7f7f7;
+  position: relative; }
   .mensajePrincipal h2 {
     color: #ededed;
     font-size: 3em;
@@ -115,6 +116,9 @@ html, body {
     #contacto .social a {
       color: #3e87cc;
       text-decoration: none; }
+  #contacto h1 {
+    color: #f7f7f7;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.8); }
   #contacto h3 {
     font-size: 1.8em;
     line-height: 0.8em;
@@ -187,7 +191,8 @@ html, body {
   width: 100%;
   height: 100%;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  background-attachment: fixed; }
 
 .half {
   display: inline-block;
