--- a/css/style.css
+++ b/css/style.css
@@ -273,4 +273,118 @@ header {
 .social {
   font-family: 'Socialico'; }
 
+@media (max-width: 960px) {
+  header {
+    background-color: #000; }
+    header nav ul li {
+      opacity: 0;
+      transition: all 0.4s; }
+    header #logo {
+      padding: 1em;
+      transition: all 1s; }
+    header:active nav ul {
+      height: 130px; }
+    header:active nav ul li {
+      opacity: 1; }
+    header:active #logo {
+      top: 300px; }
+
+  .fullScreen {
+    min-height: 100%;
+    height: auto; }
+
+  #index {
+    background: url(../img/DSCF0302-movil.jpg);
+    background-size: auto 100%; }
+
+  #buffet {
+    height: 100%; }
+    #buffet .image_food {
+      background-size: auto 100%;
+      background-position: top 50%; }
+
+  #contacto {
+    background: url(../img/DSCN1218-movil.jpg);
+    background-size: auto 100%; }
+
+  #costos {
+    background-size: auto 100%;
+    background: url(../img/DSCN1332-movil.jpg);
+    height: 100%; }
+    #costos .precio {
+      width: 45%;
+      margin: 0 auto; }
+
+  #go_up {
+    display: none; }
+
+  .img-principal {
+    display: none; }
+
+  .centerCircle {
+    position: static;
+    border-radius: 0px;
+    max-width: 100%;
+    top: 0px;
+    width: 100%;
+    height: auto;
+    padding: 0;
+    margin-top: 1em; }
+
+  .half {
+    display: block;
+    width: 100%;
+    top: 0px; }
+
+  .slideContainer {
+    display: none; } }
+@media (max-width: 600px) {
+  .fullScreen:nth-of-type(1) {
+    background: url(../img/intro-movil.jpg);
+    background-size: auto 100%; }
+
+  .hidePhone {
+    display: none; }
+
+  .mensaje {
+    margin-top: 0;
+    font-size: 1em;
+    padding: 0;
+    width: 100%; }
+
+  * {
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word; }
+
+  #main, .down {
+    width: 100%; }
+
+  [class*="span"],
+  .row-fluid [class*="span"] {
+    display: block;
+    float: none;
+    width: 100%;
+    margin-left: 0; }
+
+  .posts article {
+    display: block;
+    width: 100%; }
+
+  #costos {
+    height: auto; }
+
+  #costos .precio {
+    width: 100%;
+    display: block;
+    margin: 0; }
+
+  header nav ul li {
+    width: 80%;
+    margin: 0 auto;
+    display: block; }
+
+  .slideContainer {
+    display: none; } }
+
 /*# sourceMappingURL=style.css.map */
